fixed text alignment for projects 3 - 6

--- a/portfolio_pageStyle.css
+++ b/portfolio_pageStyle.css
@@ -282,7 +282,11 @@ aside {
 }
 
 .Project3 {
-    width: 32vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 32vw;
     height: 40vh;
 	flex: 1 1;
 	margin: 10px;
@@ -309,9 +313,8 @@ aside {
 .Project3:hover .P3text {
 	display: inline-block;
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	top: 25%;
+	align-self: center;
 	z-index: 2;
 }
 
@@ -319,21 +322,23 @@ aside {
 	display: none;
 	text-align: center;
 	font-size: 1.4em;
+	margin-top: 20%;
 }
 
 .Project3:hover .Small {
 	display: inline-block;
-	width: 60%;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	left: 25%;
-	top: 50%;
 }
 
 .Project4 {
-    width: 32vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 32vw;
     height: 40vh;
 	flex: 1 1;
 	margin: 10px;
@@ -360,9 +365,8 @@ aside {
 .Project4:hover .P4text {
 	display: inline-block;
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	top: 25%;
+	align-self: center;
 	z-index: 2;
 }
 
@@ -370,21 +374,23 @@ aside {
 	display: none;
 	text-align: center;
 	font-size: 1.4em;
+	margin-top: 20%;
 }
 
 .Project4:hover .Small {
 	display: inline-block;
-	width: 60%;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	left: 25%;
-	top: 50%;
 }
 
 .Project5 {
-    width: 32vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 32vw;
     height: 40vh;
 	flex: 1 1;
 	margin: 10px;
@@ -411,9 +417,8 @@ aside {
 .Project5:hover .P5text {
 	display: inline-block;
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	top: 25%;
+	align-self: center;
 	z-index: 2;
 }
 
@@ -421,21 +426,23 @@ aside {
 	display: none;
 	text-align: center;
 	font-size: 1.4em;
+	margin-top: 30%;
 }
 
 .Project5:hover .Small {
 	display: inline-block;
-	width: 60%;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	left: 25%;
-	top: 50%;
 }
 
 .Project6 {
-    width: 26vw;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 26vw;
     height: 32vh;
 	flex: 1 1;
 	margin: 10px;
@@ -462,9 +469,8 @@ aside {
 .Project6:hover .P6text {
 	display: inline-block;
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	top: 25%;
+	align-self: center;
 	z-index: 2;
 }
 
@@ -472,17 +478,15 @@ aside {
 	display: none;
 	text-align: center;
 	font-size: 1.4em;
+	margin-top: 20%;
 }
 
 .Project6:hover .Small {
 	display: inline-block;
-	width: 60%;
+	width: 75%;
+	margin-bottom: 25%;
 	color: #444444;
 	text-align: center;
-	position: absolute;
-	margin: auto;
-	left: 25%;
-	top: 50%;
 }
 
 footer {
